# flowpiano

./: .gitignore  Package.swift  README.md  project.yml
.github/workflows/: ci.yml
Config/: App-Info.plist  VirtualAudio-Info.plist  VirtualCamera-Info.plist  xcconfig-Debug.xcconfig  xcconfig-Release.xcconfig
Docs/: AGENTS.md  ARCHITECTURE.md  CODEX_PROMPT.md  PBXPROJ_NOTES.md  RELEASE.md  SETUP.md  SPEC.md  TARGET_MANIFEST.md  TESTING.md  TROUBLESHOOTING.md  XCODE_TARGET_CONCEPT.md
FlowPiano.xcodeproj/: project.pbxproj
Sources/App/: ContentView.swift  FlowPianoApp.swift  FlowPianoAppModel.swift  FlowPianoPlatformBridge.swift  HarmonyTrainerView.swift
Sources/AudioEngine/: AudioEngine.swift  PlatformAudioRuntime.swift
Sources/Diagnostics/: Diagnostics.swift
Sources/FlowPianoCore/: FlowPianoCore.swift
Sources/HarmonyTrainer/: ChordDetection.swift  Exercise.swift  FunctionalHarmony.swift  HarmonyTrainer.swift  HarmonyTrainerState.swift  MusicTheory.swift  Progression.swift
Sources/LayoutEngine/: LayoutEngine.swift
Sources/MIDIEngine/: MIDIEngine.swift
Sources/NotationEngine/: NotationEngine.swift
Sources/OverlayEngine/: OverlayEngine.swift
XcodeTargets/: FlowPianoAppTarget.md  FlowPianoVirtualAudioDriverTarget.md  FlowPianoVirtualCameraExtensionTarget.md
scripts/: generate_xcodeproj.sh
windows/: FlowPiano.Windows.sln  README.md
windows/native/FlowPiano.VirtualCamera.Source/: CMakeLists.txt  FlowPianoVirtualCameraSource.cpp  FlowPianoVirtualCameraSource.def  FlowPianoVirtualCameraSource.reg.template  REGISTER_CAMERA_SOURCE.ps1  SourceGuids.h
(+70 files in other folders)
